# rust_web_tutorial

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: config.rs  controllers.rs  crud.rs  db.rs  main.rs  models.rs  services.rs
src/controllers/: mod.rs  user_controller.rs
src/models/: comment.rs  mod.rs  post.rs  user.rs
src/modules/user/: controller.rs  mod.rs  repository.rs  service.rs
src/repositories/: comment_repository.rs  mod.rs  post_repository.rs  user_repository.rs
src/services/: user_service.rs
